# deepfakes-detector

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/config/: settings.py
app/core/: inference.py  model.py  model_loader.py  preprocess.py  video.py
app/services/: logger.py
app/ui/: app.py  deepfakes-detector.code-workspace  drag_drop.py  inference_ui.py  main_window.py  media.py  styles.py  ui_app.py  ui_builder.py
notebooks/: fine-tuning-google-siglip2-base-patch16-512.ipynb
