[project]
name = "deepfakes-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "torch",
    "torchvision",
    "transformers",
    "pillow",
    "numpy",
    "safetensors",
    "pyqt6",
    "av>=16.0.1",
    "opencv-python>=4.11.0.86",
]
